--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,3 +1,6 @@
+login.page.title = Логин
+
+
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
 default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
